[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ntbklm-cli"
version = "0.1.0"
description = "CLI for Google NotebookLM — manage notebooks, sources, and conversations from your terminal"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "kovalov" }]
keywords = ["notebooklm", "google", "cli", "ai", "notebook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "notebooklm-py[browser]>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/kovalov/ntbklm-cli"
Issues = "https://github.com/kovalov/ntbklm-cli/issues"

[project.scripts]
ntbklm = "ntbklm_cli.cli:main"
